--- a/GeaWeb/GeaWeb.csproj
+++ b/GeaWeb/GeaWeb.csproj
@@ -47,10 +47,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Ninject, Version=3.3.3.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
@@ -166,12 +166,20 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="containerIoc\ModulosNinject .cs" />
+    <Compile Include="ContainerIoc\ModulosNinject .cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OperadorController.cs" />
+    <Compile Include="Data\GeaContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Data\Mapping\CarroMap.cs" />
+    <Compile Include="Data\Mapping\EmpresaMap.cs" />
+    <Compile Include="Data\Mapping\FaturamentoMap.cs" />
+    <Compile Include="Data\Mapping\OperadorMap.cs" />
+    <Compile Include="Data\Mapping\PerfilMap.cs" />
+    <Compile Include="Data\Mapping\RegistroDeFluxoMap.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Carro.cs" />
     <Compile Include="Models\Empresa.cs" />
     <Compile Include="Models\Faturamento.cs" />
@@ -179,6 +187,10 @@
     <Compile Include="Models\Perfil.cs" />
     <Compile Include="Models\RegistroDeFluxo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Data\Repository\RepositoryBase.cs" />
+    <Compile Include="Data\Repository\RepositoryCarro.cs" />
+    <Compile Include="Data\Repository\RepositoryInterfaces\IRepositoryBase.cs" />
+    <Compile Include="Data\Repository\RepositoryInterfaces\IRepositoryCarro.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -223,6 +235,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Business\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
