--- a/GeaWebMVC/Web.config
+++ b/GeaWebMVC/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
    <connectionStrings>
-    <add name="GeaContext_NEW" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=GEADB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
-    <add name="GeaContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=GEABANCO;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />     
+    <add name="GeaContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Teste;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <add name="GeaContext_Old" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=GEABANCO;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />     
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
